<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchSettingsActivity" >

    <TextView
        android:id="@+id/search_settings_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/settings_header" 
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/settings_imagesize_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/search_settings_header"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="28dp"
        android:text="@string/settings_image_size" />

    <TextView
        android:id="@+id/settings_imagetype_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/settings_imagesize_label"
        android:layout_below="@+id/settings_colorfilter_label"
        android:layout_marginTop="20dp"
        android:text="@string/settings_image_type" />

    <TextView
        android:id="@+id/settings_sitefilter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/settings_imagesize_label"
        android:layout_below="@+id/settings_imagetype_label"
        android:layout_marginTop="20dp"
        android:text="@string/settings_site_filter" />

    <Spinner
        android:id="@+id/val_imagesize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/settings_imagesize_label"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/settings_imagesize_label"
        android:ems="10" ></Spinner>

    <Spinner
        android:id="@+id/val_colorfilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/settings_colorfilter_label"
        android:layout_alignBottom="@+id/settings_colorfilter_label"
        android:layout_marginLeft="20dp"
        android:ems="10" ></Spinner>

    <Spinner
        android:id="@+id/val_imagetype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/settings_imagetype_label"
        android:layout_alignBottom="@+id/settings_imagetype_label"
        android:layout_marginLeft="20dp"
        android:ems="10" ></Spinner>

    <EditText
        android:id="@+id/val_sitefilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/settings_sitefilter_label"
        android:layout_alignBottom="@+id/settings_sitefilter_label"
        android:hint="@string/sitefilter_prompt"
        android:layout_marginLeft="20dp"
        android:ems="10" />

    <TextView
        android:id="@+id/settings_colorfilter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/settings_imagesize_label"
        android:layout_below="@+id/settings_imagesize_label"
        android:layout_marginTop="20dp"
        android:text="@string/settings_color_filter" />

    <Button
        android:id="@+id/settings_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/val_sitefilter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:onClick="onSaveSettings"
        android:text="@string/settings_submit" />


</RelativeLayout>
